--- a/template/index/viewschema.html
+++ b/template/index/viewschema.html
@@ -1,5 +1,24 @@
 <div>
-    view Schema
+    <div id="schema_table">
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>
+                    阶段名
+                </th>
+                <th>
+                    开始时间
+                </th>
+                <th>
+                    结束时间
+                </th>
+            </tr>
+            </thead>
+            <tbody id="schema_tbody">
+
+            </tbody>
+        </table>
+    </div>
 </div>
 <script type="text/javascript" >
     seajs.config({
