--- a/template/index/addwork.html
+++ b/template/index/addwork.html
@@ -8,44 +8,71 @@
     .control-group input{
         margin-top: 8px;
     }
+
+    .upload_ify {
+        margin-left: 200px;
+        position: relative;
+        top:-37px;
+        left: -45px;
+    }
+
+    .star {
+        color: red;
+        font-size: 15px;
+    }
 </style>
 <div>
     <div class="control-group">
-        <label class="control-label" for="work_name" >姓名：</label>
+        <label class="control-label" for="work_name" ><span class="star">*</span>姓名：</label>
         <input type="text" class="input-xlarge" id="work_name" />
     </div>
     <div class="control-group">
-        <label class="control-label" for="work_dep">部门：</label>
+        <label class="control-label" for="work_dep"><span class="star">*</span>部门：</label>
         <input type="text" class="input-xlarge" id="work_dep" />
     </div>
     <div class="control-group">
-        <label class="control-label" for="work_pos">岗位：</label>
+        <label class="control-label" for="work_pos"><span class="star">*</span>岗位：</label>
             <input type="text" class="input-xlarge" id="work_pos" />
     </div>
     <div class="control-group">
-        <label class="control-label" for="work_mail">邮箱：</label>
+        <label class="control-label" for="work_mail"><span class="star">*</span>邮箱：</label>
             <input type="text" class="input-xlarge" id="work_mail" />
     </div>
 
     <div class="control-group">
-        <label for="work_des">作品简介：</label>
-            <textarea class="input-xlarge" id="work_des" rows="2" style="width: 80%;resize: none;"></textarea>
+        <label class="control-label" for="work_title"><span class="star">*</span>作品名称：</label>
+        <input type="text" class="input-xlarge" id="work_title" />
     </div>
 
     <div class="control-group">
-        <label class="control-label" for="work_images">上传图片：</label>
-        <input type="file" id="work_images" />
+        <label for="work_des"><span class="star">*</span>作品简介：</label>
+            <textarea class="input-xlarge" id="work_des" rows="2" style="width: 78%;resize: none;"></textarea>
     </div>
 
-    <div class="control-group">
-        <label class="control-label" for="work_zip">上传附件（zip包）：</label>
-        <input type="file" id="work_zip" />
+    <form name="upload_form" action="" method="post" enctype="multipart/form-data">
+        <div class="control-group">
+            <label class="control-label" for="work_images">作品（创意）图片：</label>
+            <div class="upload_ify">
+                <input type="file" id="work_images" name="work_images"  accept=".png,.jpg,.jpeg,.bmp,.gif"/>
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="work_zip">上传附件（zip包）：</label>
+            <div class="upload_ify">
+                <input type="file" id="work_zip" name="work_zip"  accept=".zip,.rar"/>
+            </div>
+        </div>
+    </form>
+
+
+    <div id="upload_loading" style="width: 400px;margin-left: 153px;display: none;">
+        <img src="js/common/ajaxfileupload/loading.gif">
+        <div id="loading_msg" style="color: orangered;font-size: 14px;display: inline"></div>
     </div>
-
-
-
     <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Create</button> <button class="btn">Cancel</button>
+        <button type="submit" class="btn btn-primary" id="btn_commit">添加</button>
+        <button class="btn" id="btn_reset">清空</button>
     </div>
 </div>
 <script type="text/javascript" >
