--- a/template/index/allworks.html
+++ b/template/index/allworks.html
@@ -1,44 +1,124 @@
+<style type="text/css">
+    .control-group label{
+        width: 150px;
+        display: inline-block;
+        text-align: right;
+    }
+
+    .control-group p{
+        margin-top: 8px;
+        display: inline-block;
+        width: 600px;;
+    }
+</style>
 <div>
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>
-                Project
-            </th>
-            <th>
-                Client
-            </th>
-            <th>
-                Type
-            </th>
-            <th>
-                Date
-            </th>
-            <th>
-                View
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>
-                Nike.com Redesign
-            </td>
-            <td>
-                Monsters Inc
-            </td>
-            <td>
-                New Task
-            </td>
-            <td>
-                4 days ago
-            </td>
-            <td>
-                <a href="#" class="view-link">View</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div id="work_table" style="display: none;">
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>
+                    票数
+                </th>
+                <th>
+                    作者
+                </th>
+                <th>
+                    部门
+                </th>
+                <th>
+                    邮箱
+                </th>
+                <th>
+                    作品名称
+                </th>
+                <th>
+                    操作
+                </th>
+            </tr>
+            </thead>
+            <tbody id="workview_tbody">
+
+            </tbody>
+        </table>
+
+        <div class="pagination" id="pagination">
+            <ul>
+                <li class="page_ht_control">
+                    <a href="#">首页</a>
+                </li>
+                <li class="page_md_control">
+                    <a href="#">上一页</a>
+                </li>
+                <li class="page_md_control">
+                    <a href="#">下一页</a>
+                </li>
+                <li class="page_ht_control">
+                    <a href="#">末页</a>
+                </li>
+            </ul>
+
+            <div style="width: 200px;display: inline;position: relative;top: -10px;left: 20px;font-size: 14px;">
+                <span>当前第<span id="page_current">1</span>页</span>
+                <span style="margin-left: 20px;">共<span id="page_total">3</span>页</span>
+            </div>
+        </div>
+    </div>
+    <div id="work_none" style="display: none;">
+        暂无作品
+    </div>
+</div>
+<!--作品预览弹出层-->
+<div id="work_view_pop" style="display: none;">
+    <!--遮罩层-->
+    <div style="width: 99.7%;height: 99.7%;position: absolute;left: 0;top:0;z-index: 99;background-color: #000000;opacity: 0.2"></div>
+    <!--弹出层主体-->
+    <div style="position: absolute;z-index: 100;top:40px;left: 15%;background-color: #f5f5f5;width: 928px;border-radius: 10px;">
+        <div class="span9" style="margin-left: 30px;margin-top: 20px;">
+
+            <div class="control-group">
+                <label class="control-label" for="work_name_view" >姓名：</label>
+                <p id="work_name_view"></p>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="work_dep_view">部门：</label>
+                <p id="work_dep_view"></p>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="work_pos_view">岗位：</label>
+                <p id="work_pos_view"></p>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="work_mail_view">邮箱：</label>
+                <p id="work_mail_view"></p>
+            </div>
+
+            <div class="control-group">
+                <label class="control-label" for="work_title_view">作品名称：</label>
+                <p id="work_title_view"></p>
+            </div>
+
+            <div class="control-group">
+                <label for="work_des_view">作品简介：</label>
+                <p id="work_des_view"></p>
+            </div>
+
+            <div id="work_file_region">
+                <div class="control-group" id="image_file_region">
+                    <label class="control-label" >作品（创意）图片：</label>
+                    <a class="work_a" id="work_image_a" href="#">点击下载</a>
+                </div>
+
+                <div class="control-group" id="zip_file_region">
+                    <label class="control-label" >附件（zip包）：</label>
+                    <a class="work_a" id="work_zip_a" href="#">点击下载</a>
+                </div>
+            </div>
+
+            <div class="form-actions">
+                <button style="margin-left: 750px;" type="submit" class="btn btn-primary" id="btn_view_close">关闭</button>
+            </div>
+        </div>
+    </div>
 </div>
 <script type="text/javascript" >
     seajs.config({
