--- a/template/index/admin.html
+++ b/template/index/admin.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span
                         class="icon-bar"></span>
-                    <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#">后台</a>
+                    <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#">iFlyTek</a>
 
                 <div class="nav-collapse">
                     <ul class="nav" >
@@ -47,6 +47,12 @@
                         </li>
                         <li class="top_nav_item" id="top_nav_schema">
                             <a href="#">时间轴管理</a>
+                        </li>
+                        <li class="top_nav_item" id="top_nav_result">
+                            <a href="#">比赛管理</a>
+                        </li>
+                        <li class="top_nav_item" id="top_nav_account">
+                            <a href="#">账号管理</a>
                         </li>
                     </ul>
                 </div>
@@ -77,6 +83,26 @@
                     <li class="left_nav_item" id="left_nav_setschema">
                         <a href="#"><i class="icon-user"></i>设置时间轴</a>
                     </li>
+
+                    <li class="nav-header">
+                        比赛管理
+                    </li>
+                    <li class="left_nav_item" id="left_nav_result_view">
+                        <a href="#"><i class="icon-user"></i>查看比赛结果</a>
+                    </li>
+                    <li class="left_nav_item" id="left_nav_reward_item">
+                        <a href="#"><i class="icon-user"></i>奖项设置</a>
+                    </li>
+                    <li class="left_nav_item" id="left_nav_result_set">
+                        <a href="#"><i class="icon-user"></i>设置比赛结果</a>
+                    </li>
+                    <li class="nav-header">
+                        账号管理
+                    </li>
+                    <li class="left_nav_item" id="left_nav_account">
+                        <a href="#"><i class="icon-user"></i>修改密码</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
