--- a/template/index/result_view.html
+++ b/template/index/result_view.html
@@ -1,5 +1,33 @@
 <div>
-    result_view
+    <div id="result_view_table" style="display: none;">
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>
+                    作者
+                </th>
+                <th>
+                    部门
+                </th>
+                <th>
+                    邮箱
+                </th>
+                <th>
+                    作品名称
+                </th>
+                <th>
+                    奖项
+                </th>
+            </tr>
+            </thead>
+            <tbody id="result_view_tbody">
+
+            </tbody>
+        </table>
+    </div>
+    <div id="result_view_none" style="display: none;">
+        暂无结果
+    </div>
 </div>
 <script type="text/javascript" >
     seajs.config({
