--- a/template/home/index.html
+++ b/template/home/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>首页-2014科大讯飞教育产品创意大赛</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/base.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/index/css/index.css"/>
@@ -69,27 +69,27 @@
             <li id="n5"><a href="./index.php?c=main&a=dep_intro" title="畅言教具产品介绍">畅言教育</br>产品介绍</a></li>
         </ul>
         <ul class="reg-step clearfix">
-            <li>
+            <li class="reg_schema_step_1">
                 <span class="reg-step-01" title="作品征集">
                     <i></i>
                 </span>
             </li>
-            <li class="active">
+            <li class="reg_schema_step_2">
                 <span class="reg-step-02" title="作品海选">
                     <i></i>
                 </span>
             </li>
-            <li>
+            <li class="reg_schema_step_3">
                 <span class="reg-step-03" title="入围作品投票">
                     <i></i>
                 </span>
             </li>
-            <li>
+            <li class="reg_schema_step_4">
                 <span class="reg-step-04" title="作品PK大赛">
                     <i></i>
                 </span>
             </li>
-            <li>
+            <li class="reg_schema_step_5">
                 <span class="reg-step-05" title="赛果揭晓">
                     <i></i>
                 </span>
@@ -156,7 +156,42 @@
 </div>
 <!--Main-->
 <script type="text/javascript">
+    $(function() {
+        function compareDateBigger(date1,date2){
+            var d1 = new Date(date1.replace("-","/"));
+            var d2 = new Date(date2.replace("-","/"));
+            if(d1 > d2) {
+                return true;
+            } else{
+                return false;
+            }
+        }
 
+        function compareDateLittle(date1,date2){
+            var d1 = new Date(date1.replace("-","/"));
+            var d2 = new Date(date2.replace("-","/"));
+            if(d1 < d2) {
+                return true;
+            } else{
+                return false;
+            }
+        }
+
+        var today = new Date().getFullYear()+'-' + (new Date().getMonth()+1) + '-' + new Date().getDate();
+        $.post('./index.php?c=work_mgr&a=view_schema',null,function(ret) {
+            var currentIndex = 0;
+            var retObj = JSON.parse(ret);
+            for(var i=0;i<retObj.length;i++) {
+                if(!compareDateLittle(today,retObj[i]['cpt_start_time']) && !compareDateBigger(today,retObj[i]['cpt_end_time'])) {
+                    currentIndex = retObj[i]['cpt_index'];
+                    break;
+                }
+            }
+
+            $('.reg_schema_step_'+currentIndex).addClass('active');
+            console.log(currentIndex);
+        });
+    });
 </script>
 </body>
 </html>
