--- a/template/home/into.html
+++ b/template/home/into.html
@@ -3,10 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>畅言教育产品介绍-2014科大讯飞教育产品创意大赛</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/base.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/index/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="template/home/static/into/css/into.css"/>
     <script src="js/common/jquery-1.11.0/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/bootstrap.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/navbar.js"></script>
@@ -51,8 +52,61 @@
 <!--Header-->
 
 <!--Main-->
-<div class="main" style="background: none;">
-    <p style="text-align:center;height:500px;line-height:500px;font-size:36px;color:#fff;">快马加鞭，敬请期待……</p>
+<div class="main">
+    <div class="slogan">
+        <div class="btnbox">
+            <a class="btn btn-reg" href="mailto:epd_cpcy@iflytek.com" title="报名-点我、点我">
+                <span class="line-1"></span>
+                <span class="line-2"></span>
+                <span class="line-3"></span>
+                <span class="line-4"></span>
+            </a>
+        </div>
+    </div>
+    <div class="reg-step-item">
+        <ul class="menu-sub clearfix">
+            <li id="n1"><a href="./index.php?c=main&a=index" title="首页">首页</a></li>
+            <li id="n2"><a href="./index.php?c=main&a=vote_notice" title="参赛须知">参赛须知</a></li>
+            <li id="n3"><a href="./index.php?c=main&a=work_vote" title="入围作品投票">入围作品投票</a></li>
+            <li id="n4"><a href="./index.php?c=main&a=vote_result" title="赛果揭晓">赛果揭晓</a></li>
+            <li class="active" id="n5"><a href="./index.php?c=main&a=dep_intro" title="畅言教具产品介绍">畅言教育</br>产品介绍</a></li>
+        </ul>
+    </div>
+    <div class="info-item">
+        <h3>畅言教育产品介绍</h3>
+        <ul class="clearfix">
+            <li>
+                <span class="info-item-n1">畅言教师助手</span>
+                <span class="info-item-n2"><a href="http://yun.changyan.com/tplatformPC/" target="_blank">http://yun.changyan.com/tplatformPC/</a></span>
+            </li>
+            <li>
+                <span class="info-item-n1">畅言云</span>
+                <span class="info-item-n2"><a href="http://yun.changyan.com/teacherpad/" target="_blank">http://yun.changyan.com/teacherpad/</a></span>
+            </li>
+            <li>
+                <span class="info-item-n1">教师机</span>
+                <span class="info-item-n2"><a href="http://yun.changyan.com/teacherpad/" target="_blank">http://yun.changyan.com/teacherpad/</a></span>
+            </li>
+            <li>
+                <span class="info-item-n1">智学网</span>
+                <span class="info-item-n2"><a href="http://tiku.changyan.com/login.jsp?nextpage=index" target="_blank">http://tiku.changyan.com/login.jsp?nextpage=index</a></span>
+            </li>
+            <li>
+                <span class="info-item-n1">其他产品在讯飞官网教育的产品中心有介绍</span>
+                <span class="info-item-n2"><a href="http://www.iflytek.com/educational/pcenter.html" target="_blank">http://www.iflytek.com/educational/pcenter.html</a></span>
+            </li>
+        </ul>
+    </div>
+    <span id="indexg0" class="sha-con1"></span>
+    <span id="indexg1" class="sha-con2"></span>
+    <span id="indexg2" class="sha-con3"></span>
+    <span id="indexg3" class="sha-con4"></span>
+    <!--Footer-->
+    <div class="footer">
+        <p class="copyright">主办方：科大讯飞 教育产品事业部    协办方：教育文化建设小组</p>
+    </div>
+    <!--Footer-->
+
 </div>
 <!--Main-->
 <script type="text/javascript">
