--- a/template/home/results.html
+++ b/template/home/results.html
@@ -3,14 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>赛果揭晓-2014科大讯飞教育产品创意大赛</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/base.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/index/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="template/home/static/results/css/results.css"/>
     <script src="js/common/jquery-1.11.0/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/bootstrap.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/navbar.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/index.js"></script>
+    <script type="text/javascript" src="js/sea-debug.js"></script>
     <!--[if lte IE 8]>
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/hack.css"/>
     <div class="ie7">
@@ -49,12 +51,73 @@
 <!--Header-->
 
 <!--Main-->
-<div class="main" style="background: none;">
-    <p style="text-align:center;height:500px;line-height:500px;font-size:36px;color:#fff;">快马加鞭，敬请期待……</p>
+<div class="main">
+    <div class="slogan">
+        <div class="btnbox">
+            <a class="btn btn-reg" href="mailto:epd_cpcy@iflytek.com" title="报名-点我、点我">
+                <span class="line-1"></span>
+                <span class="line-2"></span>
+                <span class="line-3"></span>
+                <span class="line-4"></span>
+            </a>
+        </div>
+    </div>
+    <div class="reg-step-item">
+        <ul class="menu-sub clearfix">
+            <li id="n1"><a href="./index.php?c=main&a=index" title="首页">首页</a></li>
+            <li id="n2"><a href="./index.php?c=main&a=vote_notice" title="参赛须知">参赛须知</a></li>
+            <li id="n3"><a href="./index.php?c=main&a=work_vote" title="入围作品投票">入围作品投票</a></li>
+            <li class="active" id="n4"><a href="./index.php?c=main&a=vote_result" title="赛果揭晓">赛果揭晓</a></li>
+            <li id="n5"><a href="./index.php?c=main&a=dep_intro" title="畅言教具产品介绍">畅言教育</br>产品介绍</a></li>
+        </ul>
+    </div>
+    <div class="result-item">
+        <h3>赛过揭晓</h3>
+        <div class="re-tips">
+            <div class="bt"><b class="cr">亲爱的各位同事：</b></div>
+            <p>感谢大家对“2014教育产品创意大赛”的热情参与与支持，感谢56组入围作品的同事积极配合。</p>
+            <p>* 我们将于结果公示后的<font class="cr">五个工作日内</font>通过【电子邮件】（参赛报名时填写的邮箱地址）
+                与各位获奖的同事联系，请注意查收邮件。如有获奖设计师五个工作日后仍未收到邮件，请检查邮箱的垃圾邮件夹或致信（<a href="mailto:epd_cpcy@iflytek.com" class="cr">epd_cpcy@iflytek.com</a>）询问颁奖事宜。</p>
+            <p>现将最终获奖结果公示如下：</p>
+        </div>
+        <div id="result_reg" style="display: none;">
+            <div class="prize-one" id="reward_price_1" style="display: none;">
+                <p class="prize-h3">创意之星：Apple iPhone6 plus</p>
+
+            </div>
+            <div class="prize-two" id="reward_price_2" style="display: none;">
+                <p class="prize-h3">银奖：Apple iPhone6</p>
+
+            </div>
+            <div class="prize-three" id="reward_price_3" style="display: none;">
+                <p class="prize-h3">铜奖：Apple iPad mini  （3名）   人气奖：Apple iPad mini</p>
+
+            </div>
+        </div>
+        <p id="page_tip" style="text-align:center;height:500px;line-height:500px;font-size:36px;color:#fff;display: none"></p>
+    </div>
+    <span id="indexg0" class="sha-con1"></span>
+    <span id="indexg1" class="sha-con2"></span>
+    <span id="indexg2" class="sha-con3"></span>
+    <span id="indexg3" class="sha-con4"></span>
+    <!--Footer-->
+    <div class="footer">
+        <p class="copyright">主办方：科大讯飞 教育产品事业部    协办方：教育文化建设小组</p>
+    </div>
+    <!--Footer-->
+
 </div>
 <!--Main-->
 <script type="text/javascript">
-
+    seajs.config({
+        alias : {
+        },
+        debug : 0
+        // 0: 只输出少量信息 1：输出大量信息 2：对已加载的文件不进行缓存
+    });
+    seajs.use('home/vote_result', function(vote_result){
+        vote_result.init();
+    });
 </script>
 </body>
 </html>
