--- a/template/home/results.html
+++ b/template/home/results.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="template/home/static/common/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/index/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="template/home/static/results/css/results.css"/>
+	<script src="js/json2.min.js"></script>
     <script src="js/common/jquery-1.11.0/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/bootstrap.js"></script>
     <script type="text/javascript" src="template/home/static/common/js/navbar.js"></script>
@@ -30,19 +31,19 @@
         <div class="top_menu fr">
             <ul>
                 <li >
-                    <a href="./index.php?c=main&a=index" title="首页">首页</a>
+                    <a href="./index.php?c=main&a=index#content" title="首页">首页</a>
                 </li>
                 <li>
-                    <a href="./index.php?c=main&a=vote_notice" title="参赛须知">参赛须知</a>
+                    <a href="./index.php?c=main&a=vote_notice#content" title="参赛须知">参赛须知</a>
                 </li>
                 <li>
-                    <a href="./index.php?c=main&a=work_vote" title="入围作品投票">入围作品投票</a>
+                    <a href="./index.php?c=main&a=work_vote#content" title="入围作品投票">入围作品投票</a>
                 </li>
                 <li class="me_active">
-                    <a href="./index.php?c=main&a=vote_result" title="赛果揭晓">赛果揭晓</a>
+                    <a href="./index.php?c=main&a=vote_result#content" title="赛果揭晓">赛果揭晓</a>
                 </li>
                 <li>
-                    <a href="./index.php?c=main&a=dep_intro" title="畅言教具产品介绍">畅言教育产品介绍</a>
+                    <a href="./index.php?c=main&a=dep_intro#content" title="畅言教具产品介绍">畅言教育产品介绍</a>
                 </li>
             </ul>
         </div>
@@ -54,7 +55,7 @@
 <div class="main">
     <div class="slogan">
         <div class="btnbox">
-            <a class="btn btn-reg" href="mailto:epd_cpcy@iflytek.com" title="报名-点我、点我">
+            <a class="btn btn-reg" href="./index.php?c=main&a=vote_notice#content" name="content" title="报名-点我、点我">
                 <span class="line-1"></span>
                 <span class="line-2"></span>
                 <span class="line-3"></span>
@@ -64,21 +65,17 @@
     </div>
     <div class="reg-step-item">
         <ul class="menu-sub clearfix">
-            <li id="n1"><a href="./index.php?c=main&a=index" title="首页">首页</a></li>
-            <li id="n2"><a href="./index.php?c=main&a=vote_notice" title="参赛须知">参赛须知</a></li>
-            <li id="n3"><a href="./index.php?c=main&a=work_vote" title="入围作品投票">入围作品投票</a></li>
-            <li class="active" id="n4"><a href="./index.php?c=main&a=vote_result" title="赛果揭晓">赛果揭晓</a></li>
-            <li id="n5"><a href="./index.php?c=main&a=dep_intro" title="畅言教具产品介绍">畅言教育</br>产品介绍</a></li>
+            <li id="n1"><a href="./index.php?c=main&a=index#content" title="首页">首页</a></li>
+            <li id="n2"><a href="./index.php?c=main&a=vote_notice#content" title="参赛须知">参赛须知</a></li>
+            <li id="n3"><a href="./index.php?c=main&a=work_vote#content" title="入围作品投票">入围作品投票</a></li>
+            <li class="active" id="n4"><a href="./index.php?c=main&a=vote_result#content" title="赛果揭晓">赛果揭晓</a></li>
+            <li id="n5"><a href="./index.php?c=main&a=dep_intro#content" title="畅言教具产品介绍">畅言教育</br>产品介绍</a></li>
         </ul>
     </div>
     <div class="result-item">
         <h3>赛过揭晓</h3>
         <div class="re-tips">
-            <div class="bt"><b class="cr">亲爱的各位同事：</b></div>
-            <p>感谢大家对“2014教育产品创意大赛”的热情参与与支持，感谢56组入围作品的同事积极配合。</p>
-            <p>* 我们将于结果公示后的<font class="cr">五个工作日内</font>通过【电子邮件】（参赛报名时填写的邮箱地址）
-                与各位获奖的同事联系，请注意查收邮件。如有获奖设计师五个工作日后仍未收到邮件，请检查邮箱的垃圾邮件夹或致信（<a href="mailto:epd_cpcy@iflytek.com" class="cr">epd_cpcy@iflytek.com</a>）询问颁奖事宜。</p>
-            <p>现将最终获奖结果公示如下：</p>
+           
         </div>
         <div id="result_reg" style="display: none;">
             <div class="prize-one" id="reward_price_1" style="display: none;">
@@ -94,7 +91,7 @@
 
             </div>
         </div>
-        <p id="page_tip" style="text-align:center;height:500px;line-height:500px;font-size:36px;color:#fff;display: none"></p>
+        <p id="page_tip" ></p>
     </div>
     <span id="indexg0" class="sha-con1"></span>
     <span id="indexg1" class="sha-con2"></span>
@@ -102,7 +99,7 @@
     <span id="indexg3" class="sha-con4"></span>
     <!--Footer-->
     <div class="footer">
-        <p class="copyright">主办方：科大讯飞 教育产品事业部    协办方：教育文化建设小组</p>
+        <p class="copyright">主办方:&nbsp;&nbsp;教育产品事业部&nbsp;&nbsp;&nbsp;&nbsp;总裁办</p>
     </div>
     <!--Footer-->
 
