--- a/template/home/static/common/css/common.css
+++ b/template/home/static/common/css/common.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+﻿@charset 'UTF-8';
 
 body{
     background:#171133 url("../images/body_bg.jpg") no-repeat center 8px;
@@ -150,7 +150,7 @@ body{
     float:left;
     width:182px;
     height:113px;
-    margin-right:15px;
+    margin-left:15px;
 }
 .menu-sub li a{
     display:block;
@@ -246,4 +246,84 @@ body{
 }
 #errorie div a:hover{
     text-decoration:underline;
+}
+
+
+/*step*/
+.reg-step{
+    margin:30px 80px;
+    text-align:center;
+    padding-bottom:30px;
+    border-bottom:1px dashed #2e2753;
+
+}
+.reg-step li {
+    display:block;
+    padding-right:28px;
+    margin:0 20px;
+    float:left;
+ 
+}
+.reg-step li:last-child{
+    background:none;
+}
+.reg-step li span{
+    display:block;
+    width:100px;
+    height:85px;
+    position:relative;
+    margin-bottom:-4px;
+    background:url("../images/step_bg.png") no-repeat 0 0;
+}
+.reg-step li span i{
+    position:absolute;
+    bottom:-30px;
+    left:50%;
+    margin-left:-5px;
+    display:none;
+    width:12px;
+    height:15px;
+}
+.reg-step li.active span i{
+    display:block;
+}
+.reg-step li span.reg-step-01{
+    background-position:0 0;
+}
+.reg-step li.active span.reg-step-01{
+    background-position:-100px 0;
+}
+.reg-step li span.reg-step-02{
+    background-position:0 -85px;
+}
+.reg-step li.active span.reg-step-02{
+    background-position:-100px -85px;
+}
+.reg-step li span.reg-step-03{
+    background-position:0 -170px;
+}
+.reg-step li.active span.reg-step-03{
+    background-position:-100px -170px;
+}
+.reg-step li span.reg-step-04{
+    background-position:0 -255px;
+}
+.reg-step li.active span.reg-step-04{
+    background-position:-100px -255px;
+}
+.reg-step li span.reg-step-05{
+    background-position:0 -340px;
+}
+.reg-step li.active span.reg-step-05{
+    background-position:-100px -340px;
+}
+
+/**/
+
+#page_tip{
+    text-align:center;
+    height:200px;
+    line-height:200px;
+    font-size: 36px;
+    color:#fff;
 }
