--- a/template/home/static/entries/css/entries.css
+++ b/template/home/static/entries/css/entries.css
@@ -6,11 +6,12 @@
 .contain{
     width: 1000px;
 }
-.contain p, .other p{
+.contain p,
+.other p{
    padding: 3px 0 3px 35px;
    line-height: 32px;
    color: #b5afd3;
-   font-size: 14px;
+   font-size: 16px;
 
 }
 .background,.object, .ask ,.submit ,.path ,.standard ,.prize ,.data{
@@ -58,21 +59,16 @@
     margin: 20px 0 0 30px;
 }
 .first, .second, .third{
+    width: 245px;
     height: 114px;
     overflow: hidden;
-}
-.first{
-    background: url(../images/des_bg.png) no-repeat  0 0;
-    width: 187px;
+    background:#2b2252;
+    border:1px solid #372b6c;
 }
 .second{
-    background: url(../images/des_bg.png) no-repeat -237px 0;
     margin-left: 50px;
-    width: 236px;
   }
 .third{
-    background: url(../images/des_bg.png) no-repeat  -520px  0;
-    width: 236px;
     margin-left: 50px;
 }
 .first h3, .second h3, .third h3{
@@ -95,19 +91,6 @@
 .prize  p font{
     color: #e2224b;
 }
-.reg-step li span i{
-    position:absolute;
-    bottom:-36px;
-    left:50%;
-    margin-left:-5px;
-    display:none;
-    width:12px;
-    height:15px;
-    background:url("../images/step_on01.png") no-repeat 0 0;
-}
-.reg-step li.active span.reg-step-02{
-    background-position:0 -85px;
-}
 .other{
     margin:50px auto 0;
 }
@@ -127,67 +110,6 @@
 }
 .other p{
     margin-bottom: 50px;
-}
-/*step*/
-.reg-step{
-    margin-top:50px;
-    text-align:center;
-    border-bottom:1px dashed #2e2753;
-    padding-bottom:30px;
-}
-.reg-step li {
-    display:inline-block;
-    padding-right:28px;
-    margin-right:40px;
-    background:url("../images/step_li_bg.png") no-repeat right;
-}
-.reg-step li:last-child{
-    background:none;
-}
-.reg-step li span{
-    display:inline-block;
-    width:100px;
-    height:85px;
-    position:relative;
-    margin-bottom:-4px;
-    background:url("../images/step_bg.png") no-repeat 0 0;
-}
-.reg-step li span i{
-    position:absolute;
-    bottom:-30px;
-    left:50%;
-    margin-left:-5px;
-    display:none;
-    width:12px;
-    height:15px;
-    background:url("../images/step_on.png") no-repeat 0 0;
-}
-.reg-step li.active span i{
-    display:block;
-}
-.reg-step li span.reg-step-01{
-    background-position:0 0;
-}
-.reg-step li.active span.reg-step-01{
-    background-position:-100px 0;
-}
-.reg-step li span.reg-step-03{
-    background-position:0 -170px;
-}
-.reg-step li.active span.reg-step-03{
-    background-position:-100px -170px;
-}
-.reg-step li span.reg-step-04{
-    background-position:0 -255px;
-}
-.reg-step li.active span.reg-step-04{
-    background-position:-100px -255px;
-}
-.reg-step li span.reg-step-05{
-    background-position:0 -340px;
-}
-.reg-step li.active span.reg-step-05{
-    background-position:-100px -340px;
 }
 
 /*--------------------pop----------------------------------*/
